--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<form action="/test" method="post" ></form>
+<form action="" method="" enctype="multipart/form-data" ></form>
 
 <div class="multiple-uploader" id="multiple-uploader">
     <div class="mup-msg">
@@ -17,7 +17,7 @@
     </div>
 </div>
 
-<script src="./src/js/multiple-uploader.js"  ></script>
+<script src="./src/js/multiple-uploader.js"></script>
 <script>
 
     let multipleUploader = new MultipleUploader().init({
